--- a/.config
+++ b/.config
@@ -1,4 +1,6 @@
 # This is an empty file, please overwrite it after generating the .config file with the source code
+# 这是一个空文件，请用源代码生成.config文件后覆盖它
+
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
