--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -17,6 +17,8 @@ on:
   workflow_dispatch:
 
 env:
+  # REPO_URL: https://github.com/coolsnowwolf/lede
+  # REPO_BRANCH: master
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
