--- a/.github/workflows/NeWiFi D2.yml
+++ b/.github/workflows/NeWiFi D2.yml
@@ -17,7 +17,8 @@ on:
  #   - cron: 0 16 4,9,14,19,24,28,31 * *
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  # REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config-lede-NeWiFi D2
